force-app/main/default/objects/WD_Personnel__c/WD_Personnel__c.object-meta.xml
<CustomObject>
    <label>WD Personnel</label>
    <nameField>
        <displayFormat>WDP-{00000}</displayFormat>
        <label>WDP#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WD Personnel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>