force-app/main/default/objects/WD_Personnel__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <inlineHelpText>The Base must be identified. This must reflect what is in the Driver Work Diary.  Some examples of this may be Moomba, Roma, Rig 6 - Cook Field, Camp 5 etc...</inlineHelpText>
    <label>Base</label>
    <length>30</length>
    <type>Text</type>
</CustomField>