force-app/main/default/objects/WD_Personnel__c/fields/Camp_Cook_1__c.field-meta.xml
<CustomField>
    <fullName>Camp_Cook_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Camp Cook (1)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>WD_Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>