force-app/main/default/objects/WD_Personnel__c/fields/Camp_Cook_2__c.field-meta.xml
<CustomField>
    <fullName>Camp_Cook_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Camp Cook (2)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>WD_Personnel1</relationshipName>
    <type>Lookup</type>
</CustomField>