force-app/main/default/objects/WD_Personnel__c/fields/Campy_1__c.field-meta.xml
<CustomField>
    <fullName>Campy_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campy (1)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>WD_Personnel2</relationshipName>
    <type>Lookup</type>
</CustomField>