force-app/main/default/objects/WD_Personnel__c/fields/Campy_2__c.field-meta.xml
<CustomField>
    <fullName>Campy_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campy (2)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>WD_Personnel3</relationshipName>
    <type>Lookup</type>
</CustomField>