force-app/main/default/objects/WD_Personnel__c/fields/Crew_Change_Day__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_Day__c</fullName>
    <label>Crew Change Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>