force-app/main/default/objects/WD_Personnel__c/fields/Crew_Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_Details__c</fullName>
    <label>Crew Change Details</label>
    <type>TextArea</type>
</CustomField>