force-app/main/default/objects/WD_Personnel__c/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DR #</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>WD Personnel</relationshipLabel>
    <relationshipName>WD_Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>