force-app/main/default/objects/WD_Personnel__c/fields/Extra_Man__c.field-meta.xml
<CustomField>
    <fullName>Extra_Man__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this person is required to be charged as an extra person as not included in the day rate</inlineHelpText>
    <label>Extra Man</label>
    <type>Checkbox</type>
</CustomField>