force-app/main/default/objects/WD_Personnel__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish Time</label>
    <type>Time</type>
</CustomField>