force-app/main/default/objects/WD_Personnel__c/fields/Hours_Consecutive_Rest_7__c.field-meta.xml
<CustomField>
    <fullName>Hours_Consecutive_Rest_7__c</fullName>
    <inlineHelpText>This is the total amount of Rest Hrs over a 24hr DAY Period. This may include multiple rest breaks combined with continuous rest hrs as per Work Diary.</inlineHelpText>
    <label>Total Rest Hrs</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>