force-app/main/default/objects/WD_Personnel__c/fields/Hours_Rest__c.field-meta.xml
<CustomField>
    <fullName>Hours_Rest__c</fullName>
    <label>Hours Rest</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>