force-app/main/default/objects/WD_Personnel__c/fields/JO__c.field-meta.xml
<CustomField>
    <fullName>JO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JO #</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>WD Personnel (JO #)</relationshipLabel>
    <relationshipName>WD_Personnel1</relationshipName>
    <type>Lookup</type>
</CustomField>