force-app/main/default/objects/WD_Personnel__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>WD_Personnel4</relationshipName>
    <type>Lookup</type>
</CustomField>