force-app/main/default/objects/WD_Personnel__c/fields/Night_Shift__c.field-meta.xml
<CustomField>
    <fullName>Night_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night Shift</label>
    <type>Checkbox</type>
</CustomField>