force-app/main/default/objects/WD_Personnel__c/fields/Pay_Ending__c.field-meta.xml
<CustomField>
    <fullName>Pay_Ending__c</fullName>
    <label>Pay Ending</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>03/03/2015</fullName>
            </value>
            <value>
                <fullName>17/03/2015</fullName>
            </value>
            <value>
                <fullName>31/03/2015</fullName>
            </value>
            <value>
                <fullName>14/04/2015</fullName>
            </value>
            <value>
                <fullName>28/04/2015</fullName>
            </value>
            <value>
                <fullName>12/05/2015</fullName>
            </value>
            <value>
                <fullName>26/05/2015</fullName>
            </value>
            <value>
                <fullName>09/06/15</fullName>
            </value>
            <value>
                <fullName>23/06/2015</fullName>
            </value>
            <value>
                <fullName>7/07/2015</fullName>
            </value>
            <value>
                <fullName>21/07/2015</fullName>
            </value>
            <value>
                <fullName>4/08/2015</fullName>
            </value>
            <value>
                <fullName>18/08/2015</fullName>
            </value>
            <value>
                <fullName>1/09/2015</fullName>
            </value>
            <value>
                <fullName>15/09/2015</fullName>
            </value>
            <value>
                <fullName>29/09/2015</fullName>
            </value>
            <value>
                <fullName>13/10/2015</fullName>
            </value>
            <value>
                <fullName>27/10/2015</fullName>
            </value>
            <value>
                <fullName>10/11/2015</fullName>
            </value>
            <value>
                <fullName>24/11/2015</fullName>
            </value>
            <value>
                <fullName>8/12/2015</fullName>
            </value>
            <value>
                <fullName>22/12/2015</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>