force-app/main/default/objects/WD_Personnel__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>The time the driver first starts work for the day following a consecutive rest period (7+ hrs or 24+hrs)</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>