force-app/main/default/objects/WD_Personnel__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <inlineHelpText>This is the total Work Hrs over a 24hr DAY Period as per Work Diary (not a 24hr WORK Period.)  This does not effect payroll or man hour stats.</inlineHelpText>
    <label>Total Work Hrs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>