force-app/main/default/objects/WD_Personnel__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>WD_Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>