force-app/main/default/objects/WD_Personnel__c/fields/Work_Diary__c.field-meta.xml
<CustomField>
    <fullName>Work_Diary__c</fullName>
    <inlineHelpText>Work Diary # must be completed for every job outside a 100km radius of a nominated base.  Nominated Bases must be changed in the Driver Work Diary and noted on the Transport Manager Day Sheet (SF - Transport Job Order)</inlineHelpText>
    <label>Work Diary #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>