force-app/main/default/objects/WD_Personnel__c/fields/X100km_Radius__c.field-meta.xml
<CustomField>
    <fullName>X100km_Radius__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If within a 100km of a nominated Base there is no Work Diary required.  Nominated Bases are allowed to change, depending on the operational requirements of the truck/driver eg truck required at Rig 6 for 5 days - change base to Rig 6 in front Work Diary.</inlineHelpText>
    <label>In 100km Radius</label>
    <type>Checkbox</type>
</CustomField>