force-app/main/default/objects/WD_Personnel__c/fields/X24hr_Rest_Day__c.field-meta.xml
<CustomField>
    <fullName>X24hr_Rest_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24hr Rest Day</label>
    <type>Checkbox</type>
</CustomField>