force-app/main/default/objects/WD_Personnel__c/recordTypes/Personnel.recordType-meta.xml
<RecordType>
    <fullName>Personnel</fullName>
    <active>true</active>
    <label>Personnel</label>
</RecordType>